# quicktex

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: cmake.yml  python-package.yml
docs/: conf.py  development.md  index.md  index.rst
docs/handbook/: commands.md  getting_started.md  index.md
docs/reference/: conversion.rst  dds.rst  image_utils.rst  index.rst  s3tc.rst
docs/reference/formats/: index.rst  s3tc.rst
python/: BC1.cpp  BlockEncoder.cpp  Module.cpp
quicktex/: Block.h  BlockDecoder.h  BlockEncoder.h  BlockView.h  CMakeLists.txt  Color.cpp  Color.h  ColorBlock.h  Decoder.h  Encoder.h  Interpolator.cpp  Interpolator.h  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  OldColor.cpp  OldColor.h  Texture.cpp  Texture.h  Vec.h  VecUtil.h  Vector4.h  Vector4Int.h  __init__.py  __main__.py  _bindings.cpp  _bindings.h  bitwiseEnums.h  dds.py  image_utils.py  test.cpp  util.h
quicktex/bindings/: Module.cpp
quicktex/cli/: __init__.py  common.py  decode.py  encode.py  quicktex.py
quicktex/compression/bc1/: BC1Decoder.cpp  BC1Decoder.h  BC1Encoder.cpp  BC1Encoder.h  OrderTable.h  SingleColorTable.h
quicktex/compression/bc3/: BC3Decoder.cpp  BC3Decoder.h  BC3Encoder.cpp  BC3Encoder.h
quicktex/compression/bc4/: BC4Decoder.cpp  BC4Decoder.h  BC4Encoder.cpp  BC4Encoder.h
quicktex/compression/bc5/: BC5Decoder.cpp  BC5Decoder.h  BC5Encoder.cpp  BC5Encoder.h
quicktex/compression/bindings/: Decoders.cpp  Encoders.cpp
quicktex/ctests/: TestSIMD.cpp  TestVec.cpp
quicktex/formats/blocks/: BC3Block.h  BC4Block.h  BC5Block.h
quicktex/s3tc/: Interpolator.cpp  Interpolator.h  __init__.py  _bindings.cpp
quicktex/s3tc/bc1/: BC1Block.cpp  BC1Block.h  BC1Decoder.cpp  BC1Decoder.h  BC1Encoder.cpp  BC1Encoder.h  Histogram.h  OrderTable.cpp  OrderTable.h  OrderTable4.cpp  SingleColorTable.h  __init__.py  _bindings.cpp
quicktex/s3tc/bc3/: BC3Block.h  BC3Decoder.cpp  BC3Decoder.h  BC3Encoder.cpp  BC3Encoder.h  __init__.py  _bindings.cpp
quicktex/s3tc/bc4/: BC4Block.cpp  BC4Block.h  BC4Decoder.cpp  BC4Decoder.h  BC4Encoder.cpp  BC4Encoder.h  __init__.py  _bindings.cpp
quicktex/s3tc/bc5/: BC5Block.h  BC5Decoder.cpp  BC5Decoder.h  BC5Encoder.cpp  BC5Encoder.h  __init__.py  _bindings.cpp
quicktex/s3tc/bindings/: Decoders.cpp  Encoders.cpp
quicktex/s3tc/interpolator/: Interpolator.cpp  Interpolator.h  __init__.py  _bindings.cpp
quicktex/tests/: TestSIMD.cpp  TestSIMD.h  _bindings.cpp
quicktex/texture/: BlockTexture.h  RawTexture.cpp  RawTexture.h  Texture.h  Window.cpp  Window.h
quicktex/util/: bitbash.h  bitwiseEnums.h  iterator.h  map.h  math.h  ranges.h  simd.h  subrange.h  types.h
src/: BC1Decoder.cpp  BC1Decoder.h  BlockDecoder.h  BlockEncoder.cpp  BlockEncoder.h  BlockView.h  Color.cpp  Color.h  ColorBlock.h  Image.cpp  Image.h  Interpolator.cpp  Interpolator.h  Matrix4x4.cpp  Matrix4x4.h  Vector4.h  Vector4Int.h  bitwiseEnums.h  blocks.cpp  blocks.h  color.cpp  color.h  interpolator.cpp  interpolator.h  main.cpp  rgbcx.cpp  rgbcx.h  rgbcxDecoders.h  tables.cpp  tables.h  util.h
src/BC1/: BC1Block.h  BC1Decoder.cpp  BC1Decoder.h  BC1Encoder.cpp  BC1Encoder.h  ClusterFit.h  Histogram.h  OrderTable.cpp  OrderTable.h  SelectorHistogram.h  SingleColorTable.h  Tables.h  tables.cpp  tables.h
src/BC3/: BC3Decoder.cpp  BC3Decoder.h
src/BC4/: BC4Block.h  BC4Decoder.cpp  BC4Decoder.h  BC4Encoder.cpp  BC4Encoder.h
src/BC5/: BC5Block.h  BC5Decoder.cpp  BC5Decoder.h
src/Decoders/: BC1Decoder.cpp  BC1Decoder.h  BlockDecoder.h
src/python/: BC1Encoder.cpp
src/rgbcx/: BlockDecoder.h  BlockEncoder.h  BlockView.h  Color.cpp  Color.h  Interpolator.cpp  Interpolator.h  Matrix4x4.cpp  Matrix4x4.h  Vector4.h  __init__.py  ndebug.h
src/rgbcx/BC1/: BC1Block.h  BC1Decoder.cpp  BC1Decoder.h  BC1Encoder.cpp  BC1Encoder.h  OrderTable.cpp  OrderTable.h  OrderTable4.cpp  SingleColorTable.h  Tables.cpp
src/rgbcx/BC3/: BC3Block.h  BC3Decoder.cpp  BC3Decoder.h  BC3Encoder.cpp  BC3Encoder.h
src/rgbcx/BC4/: BC4Block.h  BC4Decoder.cpp  BC4Decoder.h  BC4Encoder.cpp  BC4Encoder.h
src/rgbcx/BC5/: BC5Decoder.cpp  BC5Decoder.h  BC5Encoder.cpp  BC5Encoder.h
src/rgbcx/bindings/: BC1.cpp  BlockDecoder.cpp  BlockEncoder.cpp  Decoders.cpp  Encoders.cpp  Module.cpp
src/rgbcx/test/: bc7decomp.cpp  bc7enc.h
src/test/: bc7enc.c  lodepng.cpp  test.cpp
tests/: CMakeLists.txt  __init__.py  blocks.py  color.py  run_tests.cpp  s3tc.py  test_BC1.py  test_bc1.py  test_bc4.py  test_ctest.py  test_install.py  test_rgbcx.py  test_texture.py
tests/ctest/: TestMatrix.cpp  TestSIMD.cpp
tests/images/: __init__.py  blocks.afdesign
tests/images/bc1/: 3color.dds  3color_black.dds  greyscale.dds
tests/images/bc4/: 6value.dds  8value.dds
tools/: CPUFeatures.cmake  CompilerWarnings.cmake  SIMDFlags.cmake  install.fish  stubgen.py
