[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=6.2",
    "wheel",
    "cmake>=3.17",
    "pybind11~=2.6.1",
    "ninja; sys_platform != 'win32'",
]
build-backend = "setuptools.build_meta"

[project]
name = "quicktex"
description = "A fast block compression library for python"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Andrew Cassidy", email = "drewcassidy@me.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
]

requires-python = ">=3.7"
dependencies = ["Pillow", "click"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["parameterized"]
docs = ["sphinx", "myst-parser", "sphinx-rtd-theme"]
stubs = ["pybind11-stubgen"]

[project.urls]
Source = "https://github.com/drewcassidy/quicktex"
Changelog = "https://github.com/drewcassidy/quicktex/blob/main/CHANGELOG.md"

[project.scripts]
quicktex = "quicktex.__main__:main"

[tool.setuptools]
zip-safe = false
packages = { find = { include = ["quicktex*"] } } # only include quicktex and not tests
package-data = { '*' = ['py.typed', '*.pyi'] } # include stubs
package-dir = { '' = '.' } # without this line, C++ source files get included in the bdist

[tool.cibuildwheel]
build = "cp{37,38,39,310}-*"
skip = ["*cp37-musllinux*", "*musllinux_aarch64*"]
test-command = "python -m unittest --verbose"
test-extras = ["tests"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.setuptools_scm]
